--- a/06_vue_shopping_centre/package.json
+++ b/06_vue_shopping_centre/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack_study",
+  "name": "06_vue_shopping_centre",
   "version": "1.0.0",
   "description": "My webpack project",
   "main": "index.js",
@@ -18,14 +18,16 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "mint-ui": "^2.2.13",
+    "url-loader": "^2.1.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.1.3",
