--- a/11_jmusic_vue/package.json
+++ b/11_jmusic_vue/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.1.2",
     "vant": "^2.2.8",
     "vue": "^2.6.10",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
   },
